project/test/semantics/good/input/Good44_shouldInheritAttributesFromSuperclassAndIncludeThemInGeneratedConstructor.ty
mutable class Product {
    
    values: {
        id: Int = 1342;
    }
    
    variables: {
        price: Int = 2000;
    }
}


mutable class Device extends Product {
    
    values: {
        serialNumber: String = "3838DJ323";
    }
    
    variables: {
        manufacturer: String = "Dell";
        model: String = "233X";
    }
}

mutable class Laptop extends Device {
    
    values: {
        displaySize: Int;
        displayType: String;
        processor: String;
        ramGb: Int;
    }
}

singleton class Inheritance {
    
    actions: {
        main: () -> Void = {
            val laptop: Laptop = Laptop(17, "IPS", "i7", 8);
            System#printLine(laptop)
        }
    }
}
